n8n/n8n-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-external
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.pindaroli.org`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
      middlewares:
        - name: oauth2-auth
          namespace: traefik

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-internal
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n-internal.pindaroli.org`) || Host(`n8n`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
